--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -61,6 +61,8 @@ rodio = { git = "https://github.com/cjpais/rodio.git" }
 reqwest = { version = "0.12", features = ["json", "stream"] }
 futures-util = "0.3"
 rustfft = "6.4.0"
+ndarray = "0.16.1"
+ort = "2.0.0-rc.10"
 strsim = "0.11.0"
 natural = "0.5.0"
 regex = "1"
